test/__snapshots__/cdkLogParser.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getParsedStacks should NOT remove SSM diffs if the SSM name/path changes 1`] = `""`;

exports[`getParsedStacks should ignore changes that only consist of updated versions in Tags 1`] = `
"Stack ThingPipeline/UsEnvIv1/BotName (UsEnvIv1-BotName)
Failed to create change set with error: 'User: arn:aws:sts::***:assumed-role/Thing-cdk-github-actions-role/GitHubActions is not authorized to perform: cloudformation:DeleteChangeSet on resource: arn:aws:cloudformation:us-west-2:***:stack/UsEnvIv1-BotName/<uuid> because no identity-based policy allows the cloudformation:DeleteChangeSet action', falling back to no change-set diff
Resources
~] AWS::SecretsManager::Secret UsEnvIv1/BotName/DeployBotGhPatSecret DeployBotGhPatSecret322D5392 
 └─ [~] Tags
     └─ @@ -61,11 +61,11 @@
        [ ] },
        [ ] {
        [ ]   "Key": "version-@time-loop/library1",
        [-]   "Value": "8.49.7"
        [+]   "Value": "8.49.13"
        [ ] },
        [ ] {
        [ ]   "Key": "version-@time-loop/library-number-2",
        [-]   "Value": "30.5.0"
        [+]   "Value": "30.9.1"
        [ ] },
        [+] {
        [+]   "Key": "A-brand-new-tag-that-should-remain",
        [+]   "Value": "important value"
        [+] },
        [ ] {
        [ ]   "Key": "version-@time-loop/cdk-log-parser",
[~] AWS::IAM::Role UsEnvIv1/BotName/CUDeployBotLambda/ServiceRole CUDeployBotLambdaServiceRoleEB15A1A9 
"
`;

exports[`getParsedStacks should ignore content before the first stack diff and NOT clobber the stack names 1`] = `""`;

exports[`getParsedStacks should remove all non-sense changes from a infra diff log 1`] = `""`;

exports[`getParsedStacks should remove all non-sense changes from a service instance diff log 1`] = `""`;
